@@ -2,35 +2,35 @@
 
 <h3>Description</h3>
 
-The Number Guessing Game is an interactive game where the player tries to guess a randomly generated secret number. With each attempt, the game provides feedback indicating whether the guess is too high or too low until the player either guesses correctly or runs out of attempts.
-Features
+The Number Guessing Game 👽🛸 is an interactive game where the player tries to guess a randomly generated secret number. With each attempt, the game provides feedback indicating whether the guess is too high or too low until the player either guesses correctly or runs out of attempts.
 
-  Randomly generates a secret number within a defined range.
-  Interactive interface allowing the player to enter guesses.
-  Immediate feedback on whether the guessed number is too high or too low.
-  Keeps track of the number of attempts made and remaining.
+**Features**
 
-Technologies Used
+  Randomly generates a secret number within a defined range.<br>
+  Interactive interface allowing the player to enter guesses.<br>
+  Immediate feedback on whether the guessed number is too high or too low.<br>
+  Keeps track of the number of attempts made and remaining.<br>
 
-  Java – Main programming language used to develop the game logic.
-  CSS – Used to style the game interface.
+**Technologies Used**
 
-How to Play
+  Java – Main programming language used to develop the game logic.<br>
+  JavaFX 23.0.2 - Framework used to create the graphical user interface (GUI) of the game.<br>
+  CSS – Used to style the game interface.<br>
+
+**How to Play**
 
 Clone this repository to your local environment:
 
     git clone https://github.com/luizcarmoo/numberGuessingGame.git
 
-Navigate to the project directory:
+Navigate to the project directory that contains the jar file:
 
-    cd numberGuessingGame
+    cd numberGuessingGame/out/artifacts/Number_Guessing_Game_jar
 
-Compile the Java source code:
+With JavaFX configured in the environment variables, run the jar file:
 
-    javac src/*.java
+    java --module-path "%JAVAFX_HOME%\lib" --add-modules javafx.controls,javafx.fxml -jar "Number Guessing Game.jar"
 
-Run the game:
+Follow the on-screen instructions to enter your guesses and try to guess the secret number 0 ~ 100.
 
-    java src.Main
-
-Follow the on-screen instructions to enter your guesses and try to guess the secret number.
+Enjoy the game 😉
